# sysplug

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  publish.yml  tests.yml
examples/: deepspeed_example.py  dpo_custom_loop.py  raw_pytorch.py  rlhf_ppo.py  sft_huggingface.py
frontend/: requirements.txt  server.py
frontend/static/: index.html
paper/: Makefile  paper.tex  refs.bib
paper/data/: gpu_measurements.json
paper/experiments/: calibrate_memory.py  collect_results.py  measure_gpu.py  run_dpo_eval.sh  run_prediction_bench.sh  run_sft_eval.sh  run_vision_eval.sh
paper/figures/: comparison_table.tex  memory_model_error.py  system_overview.tex  throughput_comparison.py
sysplug/: __init__.py  __main__.py  advisor.py  config.py  hardware.py  memory_model.py  monitor.py  solver.py  stability.py  throughput_model.py
sysplug/integrations/: __init__.py  deepspeed.py  huggingface.py  pytorch.py  rlhf.py
sysplug/utils/: __init__.py  logging.py  scaling_rules.py  validators.py
tests/: conftest.py
tests/benchmarks/: bench_memory_prediction.py  bench_throughput_prediction.py
tests/integration/: test_advisor_full_pipeline.py  test_advisor_suggest.py  test_advisor_what_if.py  test_deepspeed_integration.py  test_hf_deep.py  test_hf_integration.py  test_monitor.py  test_pytorch_integration.py  test_rlhf_integration.py
tests/real/: test_real_computations.py
tests/unit/: test_advisor_arch.py  test_config.py  test_hardware.py  test_memory_calibration.py  test_memory_model.py  test_memory_model_numeric.py  test_model_arch.py  test_scaling_rules.py  test_solver.py  test_solver_comprehensive.py  test_stability.py  test_stability_precise.py  test_throughput_model.py  test_validators.py
